src/styles/shared/searchTableModalContent.scss
@import '~yti-common-ui/theme/variables';

div.table-content-container {
  display: flex;
  flex-direction: column;
  height: auto;
  min-width: 900px;
  position: relative;

  table {
    border: 0;
    margin-bottom: 0;
    table-layout: fixed;

    .name-col {
      width: 20%;
    }

    .model-col {
      width: 20%;
    }

    .description-col {
    }

    .modified-at-col {
      width: 8%;
    }

    .info-col {
      width: 25px;
      vertical-align: top;
    }
  }

  .header-table-container {
    display: flex;
    border-bottom: 2px solid $gray-400;

    table.header-table {
      flex: 0 1 auto;

      thead {
        tr {
          background-color: white;

          th {
            border-top: 0;
            border-bottom: 0;
            white-space: nowrap;

            button {
              padding-left: 0px;
            }
          }
        }
      }
    }

    .header-table-padding {
      flex: 0 0 17px;
    }
  }

  .scroller-component {
    flex: 1 1 auto;
    overflow-y: scroll;

    table.content-table {
      tbody {
        tr.search-result {
          border-left: $active-indicator-width solid $white;
          cursor: pointer;

          &:hover, &.active {
            border-left: $active-indicator-width solid $primary;
          }

          &.active {
            background-color: $gray-200;
          }

          .glyph-icon {
            color: $primary;
          }

          td {
            border-top: 0;
            border-bottom: 1px solid $gray-400;
            overflow: hidden;
          }

          &:last-of-type td {
            border-bottom: 1px solid white;
          }
        }
      }
    }
  }
}

